[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/openbook.png" type="Texture" id=1]
[ext_resource path="res://addons/inkgd/ink_player.gd" type="Script" id=2]
[ext_resource path="res://story/InkBook.gd" type="Script" id=3]
[ext_resource path="res://assets/ink/demo.ink.json" type="Resource" id=4]
[ext_resource path="res://assets/arrow.png" type="Texture" id=5]

[node name="InkBook" type="Node2D"]
script = ExtResource( 3 )

[node name="InkPlayer" type="Node" parent="."]
script = ExtResource( 2 )
ink_file = ExtResource( 4 )

[node name="openbook" type="Sprite" parent="."]
position = Vector2( 367.961, 262.867 )
scale = Vector2( 0.727339, 0.727339 )
texture = ExtResource( 1 )

[node name="LeftPage" type="VBoxContainer" parent="."]
margin_left = 35.1698
margin_top = 20.9106
margin_right = 351.17
margin_bottom = 490.911
rect_min_size = Vector2( 316, 470 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RightPage" type="VBoxContainer" parent="."]
margin_left = 387.17
margin_top = 20.9106
margin_right = 703.17
margin_bottom = 490.911
rect_min_size = Vector2( 316, 470 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="FinalPageCopy" type="VBoxContainer" parent="."]
margin_left = -686.07
margin_top = 787.193
margin_right = -370.07
margin_bottom = 787.193
rect_min_size = Vector2( 316, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StagingArea" type="VBoxContainer" parent="."]
margin_left = -548.97
margin_top = 820.217
margin_right = -347.97
margin_bottom = 820.217
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StoryChoices" type="Control" parent="."]
margin_left = 744.192
margin_top = 4.48984
margin_right = 744.192
margin_bottom = 4.48984
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PageBack" type="TextureButton" parent="."]
margin_left = 2.0
margin_top = 489.0
margin_right = 49.0
margin_bottom = 554.0
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PageForward" type="TextureButton" parent="."]
margin_left = 727.839
margin_top = 489.0
margin_right = 774.839
margin_bottom = 554.0
rect_scale = Vector2( -1, 1 )
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
